# mouse-posyx

./: .gitignore  CMakeLists.txt  README.md  example.html  index.html  main.c  manifest.json  server.c  server.h
.circleci/: config.yml
.github/: pull_request_template.md
assets/: mouseposyx.css
include/: keyboard.h  logger.h  mouse.h  server.h
include/protocols/: about_protocol.h  http_protocol.h  keyboard_protocol.h  mouse_protocol.h
scripts/: initialize.bat  mouse-posyx_setup.iss  windows_build.py
www/: index.html
www/assets/: keyboard.js  mouse-posyx.js  mouse.js  mouseposyx.css  mouseposyx.js
